--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
 
     <div class="hero" data-aos="fade-up">
-      <img src="images/profile.jpg" alt="Profile" class="profile-img" />
+      <img src="profile.jpg" alt="Profile" class="profile-img" />
       <h1>Hi, I'm Ram Sai Sripathi</h1>
       <p>I'm a Data Science Enthusiast & Developer</p>
     </div>
